--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <img src="imagens/pexels-sean-whang-804269 (1).jpg" alt="imagem" id="img-log">
-    <main class="corpo">
+    <div id="imagem"></div>
+    <main class="corpo" id="fundo_img">
         
         <h1>Login</h1>
-        <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+        <p id="texto2">Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
         <form action="get" autocomplete="on">
             <p>
-                <label for="Lemail"><span class="material-symbols-outlined">
-                    person
-                    </span></label>
-                <input type="email" name="mail" id="Lemail" required placeholder="Seu e-mail" class="Campo">
+                <div class="Campo">
+                    <label for="Lemail"><span class="material-symbols-outlined">
+                        person
+                        </span></label>
+                    <input type="email" name="mail" id="Lemail" required placeholder="Seu e-mail">
+                </div>
             </p>
             <p>
-                <label for="Lsenha"><span class="material-symbols-outlined">
-                    vpn_key
-                    </span></label>
-                <input type="password" name="senha" id="Lsenha" required minlength="8" maxlength="30" placeholder="Sua senha" class="Campo">
+                <div class="Campo">
+                    <label for="Lsenha"><span class="material-symbols-outlined" id="Lpass">
+                        vpn_key
+                        </span></label>
+                    <input type="password" name="senha" id="Lsenha" required minlength="8" maxlength="30" placeholder="Sua senha">
+                </div>
             </p>
 
                 <p>
