adicionando novas coisas

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     
     <main class="corpo" id="fundo_img">
         <div id="imagem"></div>
-        <h1>Login</h1>
-        <p id="texto2">Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+        <h1 class="texto">Login</h1>
+        <p class="texto">Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
         <form action="get" autocomplete="on">
             <p>
                 <div class="Campo">
