--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="imagem"></div>
         <div class="texto">
             <h1>Login</h1>
-            <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+            <p class="texto2">Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
         </div>
         <form action="login.php" autocomplete="on" method="post">
             <p>
