fazendo pequenas alterações

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <input type="submit" value="Entrar" class="btn-enviar">
                 </p>
                 <p>
-                    <span><a class="btn-esq" href="#">Esqueci a senha <img src="imagens/mail_FILL1_wght500_GRAD0_opsz20.png" alt="icone de email" width="12px" class="email"></a></span>
+                    <a class="btn-esq" href="#">Esqueci a senha <img src="imagens/mail_FILL1_wght500_GRAD0_opsz20.png" alt="icone de email" width="12px" class="email"> </a>
                 </p>
         </form>
     </main>
