mudança nos media queries, html e no stylo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <label for="Lemail"><span class="material-symbols-outlined">
                         person
                         </span></label>
-                    <input type="email" name="mail" id="Lemail" required placeholder="Seu e-mail">
+                    <input type="email" name="mail" id="Lemail" required placeholder="nome@domínio.com.br">
                 </div>
             </p>
             <p>
